new user and location modals

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -11,6 +11,41 @@ body {
   }
 }
 
+.markdown h1 {
+  @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+}
+.markdown h2 {
+  @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0;
+}
+
+.markdown h3 {
+  @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+}
+
+.markdown h4 {
+  @apply scroll-m-20 text-xl font-semibold tracking-tight;
+}
+
+.markdown p {
+  @apply leading-7 [&:not(:first-child)]:mt-6;
+}
+
+.markdown blockquote {
+  @apply mt-6 border-l-2 pl-6 italic;
+}
+
+.markdown ul {
+  @apply my-6 ml-6 list-disc [&>li]:mt-2;
+}
+
+.markdown code {
+  @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+}
+
+.markdown small {
+  @apply text-sm font-medium leading-none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -89,7 +124,7 @@ body {
   }
 
   html {
-    font-family: "Roboto", system-ui, sans-serif;
+    font-family: 'Roboto', system-ui, sans-serif;
   }
 
   body {
