markdown css updates

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -12,18 +12,18 @@ body {
 }
 
 .markdown h1 {
-  @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+  @apply scroll-m-20 text-xl font-extrabold tracking-tight lg:text-5xl mt-5;
 }
 .markdown h2 {
-  @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0;
+  @apply scroll-m-20 border-b pb-2 text-lg font-semibold tracking-tight first:mt-0 mt-4;
 }
 
 .markdown h3 {
-  @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+  @apply scroll-m-20 text-base font-semibold tracking-tight mt-2;
 }
 
 .markdown h4 {
-  @apply scroll-m-20 text-xl font-semibold tracking-tight;
+  @apply scroll-m-20 text-base font-semibold tracking-tight mt-1;
 }
 
 .markdown p {
